terraform/modules/app/main.tf
resource "google_compute_instance" "app" {
  name         = "reddit-app-${count.index}"
  machine_type = "g1-small"
  zone         = "${var.zone}"
  tags         = ["reddit-app"]
  count        = "${var.instances_quantity}"

  boot_disk {
    initialize_params {
      image = "${var.app_disk_image}"
    }
  }

  metadata {
    ssh-keys = "appuser:${file(var.public_key_path)}"
  }

  network_interface {
    network = "default"

    access_config = {
      nat_ip = "${google_compute_address.app_id.address}"
    }
  }
}

resource "google_compute_firewall" "firewall_puma" {
  name    = "allow-puma-default"
  network = "default"

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["reddit-app"]

  allow {
    protocol = "tcp"
    ports    = ["9292"]
  }
}

resource "google_compute_firewall" "http_default" {
  name    = "allow-http-default"
  network = "default"

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["reddit-app"]

  allow {
    protocol = "tcp"
    ports    = ["80"]
  }
}

resource "google_compute_address" "app_id" {
  name = "reddit-app-ip"
}

resource "null_resource" "app" {
  count = "${var.is_deploy_app ? 1 : 0}"

  connection {
    type        = "ssh"
    user        = "appuser"
    agent       = false
    private_key = "${file(var.private_key_path)}"
    timeout     = "2m"
  }

  provisioner "file" {
    content     = "${data.template_file.reddit_app.rendered}"
    destination = "/tmp/puma.service"
  }

  provisioner "remote-exec" {
    script = "${path.module}/files/deploy.sh"
  }
}
